added createDeck, getDecks, and deleteDeck api functions, updated UI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: black;
   text-decoration: inherit;
 }
 a:hover {
@@ -43,7 +43,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: white;
+  color: black;
   cursor: pointer;
   transition: border-color 0.25s;
 }
