--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,47 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.createDeckForm{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 0 auto;
+  width: 500px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.decks {
+  display: grid;
+  width: 500px;
+  margin: 10 auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.decks li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
 }
 
-.card {
-  padding: 2em;
+.decks li button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  border: none;
+  background-color: white;
+  color: black;
+  font-size: 10px;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.decks li button:hover {
+  box-shadow: inset 0 0 0 2px #646cff;
 }
